# minGRU-pytorch

./: .gitignore  README.md  params.py  pyproject.toml  requirements.txt  tokenizer.model  tokenizer.vocab  train.py  train_hybrid.py
minGRU_pytorch/: __init__.py  hybrid.py  hybridLM.py  minGRU.py  minGRULM.py  minLM.py  minLSTM.py
